Questions: add metatags

--- a/app/views/layouts/application.html.liquid
+++ b/app/views/layouts/application.html.liquid
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% include 'theme/simple/layout/head' %}
-    {% yield 'item_metatags' %}
+    {% yield 'metatags' %}
     {% yield 'custom_styles' %}
   </head>
 
