--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -1,4 +1,4 @@
-{% content_for item_metatags %}
+{% content_for metatags %}
   {% render 'theme/simple/items/metatags', item: item %}
 {% endcontent_for %}
 
