--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -2,9 +2,7 @@
   <div class="container flex flex-col flex-wrap items-center mx-auto md:flex-row">
 
     <a class="flex items-center font-medium" href="/">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-content-inverted bg-interaction rounded-full" viewBox="0 0 24 24">
-        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-      </svg>
+      <img src="{{ 'images/logo.svg' | asset_url }}" alt="platformOS" class="w-10 h-10 p-2">
       <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
     </a>
 
