--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -578,7 +578,7 @@ metadata:
       url: /style-guide
 ---
 {% endraw %}</div>
-        <div class="mt-5 p-5 border bg-panel font-mopno whitespace-pre styleGuide-code">{% raw %}{% parse_json breadcrumbs %}
+        <div class="mt-5 p-5 border bg-panel font-mono whitespace-pre styleGuide-code">{% raw %}{% parse_json breadcrumbs %}
 [
 {
   "label": "Example",
@@ -608,20 +608,9 @@ metadata:
     <div class="mt-16 flex gap-10">
       <section class="w-2/3">
         {% render 'theme/simple/ui/subtitle', label: 'Tags' %}
-        <div class="mt-5 p-5 border bg-panel font-mopno whitespace-pre styleGuide-code">{% raw %}{% parse_json tags %}
-  [
-    {
-      "label": "Tag #1",
-      "url": "http://platformos.com/tag%20%231"
-    },
-    {
-      "label": "Tag #2",
-      "url": "http://platformos.com/tag%20%232"
-    }
-  ]
-{% endparse_json %}{% endraw %}</div>
+        <div class="mt-5 p-5 border bg-panel font-mono whitespace-pre-wrap styleGuide-code">tags = ['tag #1', 'tag #2']</div>
         <div class="mt-5 p-5 border bg-panel font-mono styleGuide-code">
-          {% raw %}{% render 'theme/simple/ui/tags', tags: tags  %}{% endraw %}
+          {% raw %}{% render 'theme/simple/ui/tags', tags: tags, url: 'http://platformos.com/?tag='  %}{% endraw %}
           <button class="float-right styleGuide-copy" title="Copy to clipboard">
             <svg width="24" height="24" class="text-gray-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 21.75C16.5 22.5784 15.8284 23.25 15 23.25H4.5C3.67157 23.25 3 22.5784 3 21.75V8.25C3 7.42157 3.67157 6.75 4.5 6.75H12.129C12.5265 6.75008 12.9078 6.90798 13.189 7.189L16.061 10.061C16.342 10.3422 16.4999 10.7235 16.5 11.121V21.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -632,19 +621,8 @@ metadata:
       </section>
       <section class="w-1/3 p-5 border styleGuide-example">
         <fieldset class="mt-1">
-          {% parse_json tags %}
-            [
-              {
-                "label": "Tag #1",
-                "url": "http://platformos.com/tag%20%231"
-              },
-              {
-                "label": "Tag #2",
-                "url": "http://platformos.com/tag%20%232"
-              }
-            ]
-          {% endparse_json %}
-          {% render 'theme/simple/ui/tags', tags: tags  %}
+          {% assign tags = 'tag #1, tag #2' | split: ',' %}
+          {% render 'theme/simple/ui/tags', tags: tags, url: 'http://platformos.com/?tag='  %}
         </fieldset>
       </section>
     </div>
