--- a/app/views/partials/theme/simple/posts/summary.liquid
+++ b/app/views/partials/theme/simple/posts/summary.liquid
@@ -17,11 +17,7 @@
     <div class="w-full">
       <div class="flex justify-between items-center">
         <span class="font-light text-gray-600">{{post.created_at | l: 'compact'}}</span>
-        <span>
-          {% for tag in post.tags %}
-            <a class="px-2 py-1 bg-frame rounded" href="/posts?tag={{tag}}">{{tag}}</a>
-          {% endfor %}
-        </span>
+        {% render 'theme/simple/ui/tags', tags: post.tags, url: '/posts?tag=' %}
       </div>
       <div class="mt-2">
         <a class="text-2xl text-gray-700 font-bold hover:text-gray-600" href="{{post_path}}">
