copy as markdown

--- a/app/views/pages/code-of-conduct.liquid
+++ b/app/views/pages/code-of-conduct.liquid
@@ -1,7 +1,7 @@
 <section class="py-16 bg-white">
   <div class="container">
     <div class="max-w-full prose p-4">
-      {{ 'privacy_policy_md' | t | markdown }}
+      {{ 'code_of_conduct_md' | t | markdown }}
     </div>
   </div>
 </section>
