Add pages FAQ Terms of Service Privacy policy Code of conduct About us

--- a/app/views/pages/terms-of-service.liquid
+++ b/app/views/pages/terms-of-service.liquid
@@ -1,3 +1,7 @@
-{% liquid
-  render 'theme/simple/terms-of-service'
-%}
+<section class="py-16 bg-white">
+  <div class="container">
+    <div class="markdown">
+      {{ 'terms_of_use_md' | t | markdown }}
+    </div>
+  </div>
+</section>
