--- a/app/views/partials/theme/simple/about-us.liquid
+++ b/app/views/partials/theme/simple/about-us.liquid
@@ -1,34 +1,24 @@
-<section class="py-12 px-4 text-center">
-  <h2 class="text-4xl mb-2 leading-tight font-heading">{{ 'app.about-us.our-story' | t }}</h2>
-  <p class="max-w-xl mx-auto mb-12 text-gray-500">{{ 'app.about-us.our-story-subtitle' | t }}</p>
-  <p class="mb-10 text-left">
-    {{ 'app.about-us.our-story-paragraph' | t }}
-  </p>
-  <p class="mb-10 text-left">
-    {{ 'app.about-us.our-story-paragraph2' | t }}
-  </p>
-</section>
-<section class="py-12 px-4 text-center">
-  <h2 class="text-4xl mb-2 leading-tight font-heading">{{ 'app.about-us.our-team' | t }}</h2>
-  <p class="max-w-xl mx-auto mb-12 text-gray-500">{{ 'app.about-us.our-team-subtitle' | t }}</p>
-  <div class="flex flex-wrap -mx-8">
-    <div class="md:w-1/3 p-8">
-      <img class="w-1/3 mx-auto mb-4 rounded-full" src="{{ 'images/person1.jpg' | asset_url }}" alt="">
-      <h3 class="text-xl font-heading">{{ 'app.about-us.person1-name' | t }}</h3>
-      <span>{{ 'app.about-us.person1-position' | t }}</span>
-      <p class="mt-4 text-gray-500 leading-relaxed">{{ 'app.about-us.person1-description' | t }}</p>
-    </div>
-    <div class="md:w-1/3 p-8">
-      <img class="w-1/3 mx-auto mb-4 rounded-full" src="{{ 'images/person2.jpg' | asset_url }}" alt="">
-      <h3 class="text-xl font-heading">{{ 'app.about-us.person2-name' | t }}</h3>
-      <span>{{ 'app.about-us.person2-position' | t }}</span>
-      <p class="mt-4 text-gray-500 leading-relaxed">{{ 'app.about-us.person2-description' | t }}</p>
-    </div>
-    <div class="md:w-1/3 p-8">
-      <img class="w-1/3 mx-auto mb-4 rounded-full" src="{{ 'images/person3.jpg' | asset_url }}" alt="">
-      <h3 class="text-xl font-heading">{{ 'app.about-us.person3-name' | t }}</h3>
-      <span>{{ 'app.about-us.person3-position' | t }}</span>
-      <p class="mt-4 text-gray-500 leading-relaxed">{{ 'app.about-us.person3-description' | t }}</p>
-    </div>
-  </div>
-</section>
+<section class="px-4 py-13">
+  <h2 class="mb-2 text-3xl leading-tight font-heading text-center">{{ 'app.about-us.about-pos-community-title' | t }}</h2><br><br>
+  <p class="max-w-xl mx-auto mb-12 text-gray-500">{{ 'app.about-us.about-pos-community-body1' | t }}</p>
+  <p class="max-w-xl mx-auto mb-12 text-gray-500">{{ 'app.about-us.about-pos-community-body2' | t }}</p>
+  <p class="max-w-xl mx-auto mb-12 text-gray-500">{{ 'app.about-us.about-pos-community-body3' | t }}</p>
+  <ul class="max-w-xl mx-auto mb-8 text-gray-500">
+    <p class="max-w-xl mx-auto mb-8 text-gray-500"><b>{{ 'app.about-us.be-part-of-title' | t }}</b></p>
+    <li>{{ 'app.about-us.be-part-of-li1' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li2' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li3' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li4' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li5' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li6' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li7' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li8' | t }}</li>
+    <li>{{ 'app.about-us.be-part-of-li9' | t }}</li>
+  </ul><br>
+  <h2 class="mb-2 text-3xl leading-tight font-heading text-center">{{ 'app.about-us.additional-resources' | t }}</h2><br><br>
+  <p class="max-w-xl mx-auto text-gray-500">{{ 'app.about-us.link-to-platformos' | t }}<br>{{ 'app.about-us.about-platformos' | t }}</p><br>
+  <p class="max-w-xl mx-auto text-gray-500">{{ 'app.about-us.link-to-blog' | t }}<br>{{ 'app.about-us.about-blog' | t }}</p><br>
+  <p class="max-w-xl mx-auto text-gray-500">{{ 'app.about-us.link-to-partner-portal' | t }}<br>{{ 'app.about-us.about-platformos' | t }}</p><br>
+  <p class="max-w-xl mx-auto text-gray-500">{{ 'app.about-us.link-to-documentation' | t }}<br>{{ 'app.about-us.about-platformos' | t }}</p><br>
+
+  </section>
