Add FAQ changes

--- a/app/views/partials/theme/simple/faq.liquid
+++ b/app/views/partials/theme/simple/faq.liquid
@@ -37,6 +37,51 @@
           </details>
         {% endfor %}
       </div>
+      <div class="w-full lg:w-1/2 px-4 py-2">
+        {% assign questions = 'app.faq.questions.section3' | t %}
+        {% for item in questions %}
+          {% assign value = item[1] %}
+          <details class="mb-4">
+            <summary class="cursor-pointer font-semibold bg-panel rounded-md py-2 px-4">
+              {{ value.question }}
+            </summary>
+
+            <span>
+              {{ value.answer }}
+            </span>
+          </details>
+        {% endfor %}
+      </div>
+      <div class="w-full lg:w-1/2 px-4 py-2">
+        {% assign questions = 'app.faq.questions.section4' | t %}
+        {% for item in questions %}
+          {% assign value = item[1] %}
+          <details class="mb-4">
+            <summary class="cursor-pointer font-semibold bg-panel rounded-md py-2 px-4">
+              {{ value.question }}
+            </summary>
+
+            <span>
+              {{ value.answer }}
+            </span>
+          </details>
+        {% endfor %}
+      </div>
+      <div class="w-full lg:w-1/2 px-4 py-2">
+        {% assign questions = 'app.faq.questions.section5' | t %}
+        {% for item in questions %}
+          {% assign value = item[1] %}
+          <details class="mb-4">
+            <summary class="cursor-pointer font-semibold bg-panel rounded-md py-2 px-4">
+              {{ value.question }}
+            </summary>
+
+            <span>
+              {{ value.answer }}
+            </span>
+          </details>
+        {% endfor %}
+      </div>
     </div>
   </div>
 </section>
