Rename get_slug partial to generate_slug

--- a/app/views/partials/lib/commands/posts/update/build.liquid
+++ b/app/views/partials/lib/commands/posts/update/build.liquid
@@ -1,4 +1,4 @@
-{% function slug = 'get_slug', title: object.title, id: object.id %}
+{% function slug = 'generate_slug', title: object.title, id: object.id %}
 {% parse_json object %}
   {
     "id": {{ object.id | json }},
