--- a/app/views/partials/lib/commands/posts/create/build.liquid
+++ b/app/views/partials/lib/commands/posts/create/build.liquid
@@ -6,6 +6,7 @@
     "title": {{ object.title | json }},
     "body": {{ object.body | json }},
     "tags": {{ object.tags | downcase | split: ',' | uniq }},
+    "uuid": {{ '' | uuid | json }},
     "c__score": {{ object.c__score | json }}
   }
 {% endparse_json %}
