--- a/app/views/partials/theme/simple/comments/new_entry.liquid
+++ b/app/views/partials/theme/simple/comments/new_entry.liquid
@@ -1,28 +1,46 @@
+{% liquid
+  assign uuid = '' | uuid
+  if images == null
+    assign images = true
+  endif
+%}
 <form action="/comments" method="post" data-comment-new-post>
   {% include 'authenticity_token', authenticity_token: authenticity_token %}
-  {% liquid
-    assign uuid = '' | uuid
-  %}
   <input type="hidden" name="comment[commentable_id]" value="{{ commentable.id }}" />
   <input type="hidden" name="comment[commentable_uuid]" value="{{ commentable.uuid }}" />
   <input type="hidden" name="comment[commentable_type]" value="{{ commentable_type }}" />
   <input type="hidden" name="comment[uuid]" value="{{ uuid }}" />
   <input type="hidden" name="return_to" value="{{ context.location.pathname }}" />
 
-  <div class="p-5">
+  <div class="p-5 {% if hidden %}hidden{% endif %}" data-comment-form>
     <div class="relative">
       <textarea name="comment[body]" class="w-full p-2 outline-none" rows="3" placeholder="{{ placeholder }}"></textarea>
 
       <div data-comment-photo-upload class="absolute top-0 right-0 w-8 h-8 mt-5 mr-5 text-gray-600 cursor-pointer" title="images">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" /> </svg>
+        {% if images %}
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" /> </svg>
+        {% endif %}
       </div>
     </div>
-    {% render 'theme/simple/photos/uppy_area', class: "hidden mt-5" %}
+
+    {% liquid
+      if images
+        render 'theme/simple/photos/uppy_area', class: "hidden mt-5"
+      endif
+    %}
 
     <div class="flex mt-3">
-      <button type="submit" class="ml-auto text-lg button button-secondary">Send</button>
+      <button type="submit" class="ml-auto button button-small">{{ 'app.models.comments.send' | t }}</button>
     </div>
+  </div>
+
+  <div class="w-full flex justify-between mb-4 flex-row-reverse" data-comment-show-new-post>
+    <span class="button button-secondary button-small cursor-pointer">{{ 'app.models.comments.comment' | t }}</span>
   </div>
 </form>
 
-{% include 'theme/simple/photos/uppy_form', object_uuid: uuid, presigned_url: presigned_url, user_id: current_profile.id, photo_type: 'main' %}
+{% liquid
+  if images
+    include 'theme/simple/photos/uppy_form', object_uuid: uuid, presigned_url: presigned_url, user_id: current_profile.id, photo_type: 'main'
+  endif
+%}
