--- a/app/views/partials/theme/simple/admin/users/index.liquid
+++ b/app/views/partials/theme/simple/admin/users/index.liquid
@@ -13,7 +13,7 @@
     </div>
     <div class="lg:w-1/6 lg:pl-2">
       <span class="lg:hidden">{{ 'app.users.attr.created_at' | t }}</span>
-      {{ record.created_at | l }}
+      {{ record.created_at | l: 'long' }}
     </div>
     <div class="sm:flex items-end lg:items-center lg:w-3/6 lg:pl-2">
       {% if record.profile %}
