--- a/app/views/partials/theme/simple/layout/flash.liquid
+++ b/app/views/partials/theme/simple/layout/flash.liquid
@@ -1,12 +1,12 @@
 {% if error %}
-  <div class="bg-white rounded-lg border-gray-300 border p-3 mb-4 shadow">
+  <div class="p-3 mb-4 bg-white border border-gray-300 rounded-lg shadow">
     <div class="flex flex-row">
       <div class="px-2">
         <svg class="w-6 h-6 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /> </svg>
       </div>
       <div class="ml-2 mr-6">
         <span class="font-semibold">
-          {{error}}
+          {{ error | html_safe }}
         </span>
       </div>
     </div>
@@ -14,14 +14,14 @@
 {% endif %}
 
 {% if notice %}
-  <div class="bg-white rounded-lg border-gray-300 border p-3 mb-4 shadow">
+  <div class="p-3 mb-4 bg-white border border-gray-300 rounded-lg shadow">
     <div class="flex flex-row">
       <div class="px-2">
         <svg class="w-6 h-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /> </svg>
       </div>
       <div class="ml-2 mr-6">
         <span class="font-semibold">
-          {{notice}}
+          {{ notice | html_safe }}
         </span>
       </div>
     </div>
