--- a/app/views/pages/about-us.liquid
+++ b/app/views/pages/about-us.liquid
@@ -1,3 +1,7 @@
-{% liquid
-  render 'theme/simple/about-us'
-%}
+<section class="py-16 bg-white">
+  <div class="container">
+    <div class="max-w-full prose p-4">
+      {{ 'about-us_md' | t | markdown }}
+    </div>
+  </div>
+</section>
