--- a/app/views/partials/lib/commands/posts/create/build.liquid
+++ b/app/views/partials/lib/commands/posts/create/build.liquid
@@ -6,7 +6,7 @@
     "title": {{ object.title | json }},
     "body": {{ object.body | json }},
     "tags": {{ object.tags | downcase | split: ',' | uniq }},
-    "c__score": {{ object.c__score | json }}
+    "c__score": {{ object.c__score | default: 0 | json }}
   }
 {% endparse_json %}
 
