--- a/app/views/pages/terms-of-service.liquid
+++ b/app/views/pages/terms-of-service.liquid
@@ -1,6 +1,6 @@
 <section class="py-16 bg-white">
   <div class="container">
-    <div class="max-w-full prose p-4">
+    <div class="markdown">
       {{ 'terms_of_use_md' | t | markdown }}
     </div>
   </div>
