--- a/app/views/pages/privacy-policy.liquid
+++ b/app/views/pages/privacy-policy.liquid
@@ -1,6 +1,6 @@
 <section class="py-16 bg-white">
   <div class="container">
-    <div class="max-w-full prose p-4">
+    <div class="markdown">
       {{ 'privacy_policy_md' | t | markdown }}
     </div>
   </div>
