--- a/app/views/partials/lib/commands/posts/update/build.liquid
+++ b/app/views/partials/lib/commands/posts/update/build.liquid
@@ -8,11 +8,13 @@
     "upvote_profile_ids": {{ object.upvote_profile_ids | json }},
     "downvote_profile_ids": {{ object.downvote_profile_ids | json }},
     "accepted_post_id": {{ object.accepted_post_id | json }},
-    "c__score": {{ object.c__score | json }},
     "slug": {{ slug | json }}
   }
 {% endparse_json %}
 
 {% liquid
+  if object.c__score
+    hash_assign object['c__score'] = object.c__score
+  endif
   return object
 %}
