--- a/app/views/partials/theme/simple/contacts/new.liquid
+++ b/app/views/partials/theme/simple/contacts/new.liquid
@@ -16,25 +16,25 @@
       <input type="hidden" name="contact[id]" value="{{ object.id }}" />
     {% endif %}
 
-    <div class="md:flex md:items-start mb-6 md:mb-10">
+    <div class="mb-6 md:flex md:items-start md:mb-10">
       <div class="mb-2 md:mb-0 md:w-56 md:mr-8 md:min-w-0 md:flex-shrink-0">
-        <label class="block text-lg md:text-xl font-bold" for="form-properties-attributes-email">
+        <label class="block text-lg font-bold md:text-xl" for="form-properties-attributes-email">
           {{ 'app.models.contacts.form.email' | t }}
         </label>
       </div>
       <div class="md:flex-grow md:min-w-0">
-        <input type="email" value="" name="contact[email]" id="form-properties-attributes-email" class="form-input w-full disabled:opacity-50 " placeholder="Email" required="" aria-describedby="form-properties-attributes-email-desc">
+        <input type="email" value="" name="contact[email]" id="form-properties-attributes-email" class="w-full form-input disabled:opacity-50 " placeholder="Email" required="" aria-describedby="form-properties-attributes-email-desc">
       </div>
       {% include 'theme/simple/field_error', errors: object.errors.email %}
     </div>
-    <div class="md:flex md:items-start mb-6 md:mb-10">
+    <div class="mb-6 md:flex md:items-start md:mb-10">
       <div class="mb-2 md:mb-0 md:w-56 md:mr-8 md:min-w-0 md:flex-shrink-0">
-        <label class="block text-lg md:text-xl font-bold" for="form-properties-attributes-reason">
+        <label class="block text-lg font-bold md:text-xl" for="form-properties-attributes-reason">
           {{ 'app.models.contacts.form.reason' | t }}
         </label>
       </div>
       <div class="md:flex-grow md:min-w-0">
-        <select name="contact[reason]" id="form-properties-attributes-reason" class="form-select w-full disabled:opacity-50 " required="" aria-describedby="form-properties-attributes-reason-desc"><option value="">Select reason...</option>
+        <select name="contact[reason]" id="form-properties-attributes-reason" class="w-full form-select disabled:opacity-50 " required="" aria-describedby="form-properties-attributes-reason-desc"><option value="">Select subject...</option>
           <option value="purchase">
             {{ 'app.models.contacts.reasons.purchase' | t }}
           </option>
@@ -55,17 +55,17 @@
       {% include 'theme/simple/field_error', errors: object.errors.reason %}
     </div>
 
-    <div class="md:flex md:items-start mb-6 md:mb-10">
+    <div class="mb-6 md:flex md:items-start md:mb-10">
       <div class="mb-2 md:mb-0 md:w-56 md:mr-8 md:min-w-0 md:flex-shrink-0">
-        <label class="block text-lg md:text-xl font-bold" for="form-properties-attributes-message">
+        <label class="block text-lg font-bold md:text-xl" for="form-properties-attributes-message">
           {{ 'app.models.contacts.form.message' | t }}
         </label>
-        <div class="font-normal text-sm">
+        <div class="text-sm font-normal">
           {{ 'app.models.contacts.message-explain' | t }}
         </div>
       </div>
       <div class="md:flex-grow md:min-w-0">
-        <textarea name="contact[message]" id="form-properties-attributes-message" class="form-textarea w-full disabled:opacity-50 " placeholder="Your Message" required="" rows="8" aria-describedby="form-properties-attributes-message-desc"></textarea>
+        <textarea name="contact[message]" id="form-properties-attributes-message" class="w-full form-textarea disabled:opacity-50 " placeholder="Your Message" required="" rows="8" aria-describedby="form-properties-attributes-message-desc"></textarea>
       </div>
       {% include 'theme/simple/field_error', errors: object.errors.message %}
     </div>
