Fixed posts with code blocks

--- a/app/views/partials/theme/simple/posts/card.liquid
+++ b/app/views/partials/theme/simple/posts/card.liquid
@@ -16,7 +16,7 @@
       </a>
       {% include 'theme/simple/posts/vote_box', post: post, current_profile: current_profile, root_post: root_post %}
     </aside>
-    <div class="flex flex-col min-w-0">
+    <div class="w-full flex flex-col min-w-0">
       <div class="md:flex items-start justify-between">
         <header>
           <a href="{{ creator_url }}" class="text-lg font-semibold -mt-1">
