--- a/app/views/partials/theme/simple/posts/card.liquid
+++ b/app/views/partials/theme/simple/posts/card.liquid
@@ -12,7 +12,7 @@
             assign img_url = 'images/user.svg' | asset_url
           endunless
         %}
-        <img class="w-12 h-12 rounded-full object-cover mb-5 shadow" src="{{ img_url }}" alt="avatar">
+        <img width="40" height="40" class="w-12 h-12 rounded-full object-cover mb-5 shadow" src="{{ img_url }}" alt="{{ post.creator.name }}">
       </a>
       {% include 'theme/simple/posts/vote_box', post: post, current_profile: current_profile, root_post: root_post %}
     </aside>
