Changed user name tag in question summary

--- a/app/views/partials/theme/simple/posts/summary.liquid
+++ b/app/views/partials/theme/simple/posts/summary.liquid
@@ -38,7 +38,7 @@
               endunless
             %}
             <img width="40" height="40" class="mx-3 w-10 h-10 object-cover rounded-full hidden sm:block" src="{{ img_url }}" alt="{{ post.creator.name }}">
-            <h1 class="text-content font-bold">{{ post.creator.name }}</h1>
+            <span class="text-content font-bold">{{ post.creator.name }}</span>
           </a>
         </div>
       </div>
