--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -1,11 +1,13 @@
-<div class="h-full pt-5 overflow-hidden bg-panel border rounded-lg shadow-sm">
+<div class="h-full pt-5 overflow-hidden border rounded-lg bg-panel shadow-sm">
   {% liquid
     assign img_url = user.avatar.photo.versions.small
     unless img_url
       assign img_url = 'images/user.svg' | asset_url
     endunless
   %}
-  <img class="object-cover object-center w-24 h-24 mx-auto rounded-full shadow-sm md:h-48 md:w-48" src="{{ img_url }}" alt="{{ user.slug }}">
+  <a href="/profile/{{ user.slug }}">
+    <img class="object-cover object-center w-24 h-24 mx-auto rounded-full shadow-sm md:h-48 md:w-48" src="{{ img_url }}" alt="{{ user.slug }}">
+  </a>
 
   <div class="flex items-center justify-between p-6">
     {% render 'theme/simple/follow_button', current_profile: current_profile, user: user %}
@@ -14,9 +16,11 @@
       {{ user.name }}
     </a>
 
+    <!--
     <span class="inline-flex text-right items-centertext-sm lg:ml-auto md:ml-0" title="Following">
       <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"> <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path> <circle cx="12" cy="12" r="3"></circle> </svg>
       1.2K
     </span>
+    -->
   </div>
 </div>
