--- a/app/migrations/20201214135248_posts_fill_uuid.liquid
+++ b/app/migrations/20201214135248_posts_fill_uuid.liquid
@@ -21,10 +21,10 @@ query {
 }
 {% endgraphql %}
 {% liquid
-  echo posts
-  for post in posts.results
+  log posts, type: 'migration: posts_fill_uuid'
+  for post in posts.records.results
     assign uuid = '' | uuid
     graphql r = 'posts/update', id: post.id, uuid: uuid
-    echo r
+    log r, type: 'migration: posts_fill_uuid'
   endfor
 %}
