--- a/app/views/partials/theme/simple/activities/feed_unit/header.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/header.liquid
@@ -47,7 +47,7 @@
 			endcase
 			%}
 
-			<time datetime="{{ date }}" class="block mt-1 text-sm text-gray-500">{{ date | l: 'long' }}</p>
+			<time datetime="{{ date }}" class="block mt-1 text-sm text-gray-500">{{ date | l: 'compact' }}</p>
 		</p>
 	</div>
 </div>
