--- a/app/views/partials/theme/simple/statuses/index.liquid
+++ b/app/views/partials/theme/simple/statuses/index.liquid
@@ -38,7 +38,7 @@
               </td>
               <td class="px-6 py-4 border-b border-grey-light">
                 <a href="/statuses/show/{{ status.id }}">
-                  {{ status.created_at | l: 'long' }}
+                  {{ status.created_at | l: 'compact' }}
                 </a>
               </td>
               <td class="px-6 py-4 border-b border-grey-light">
