--- a/app/views/partials/lib/commands/posts/create/check.liquid
+++ b/app/views/partials/lib/commands/posts/create/check.liquid
@@ -6,6 +6,7 @@
   function c = 'lib/validations/length', c: c, object: object, field_name: 'title', minimum: 3
   function c = 'lib/validations/presence', c: c, object: object, field_name: 'body'
   function c = 'lib/validations/length', c: c, object: object, field_name: 'body', minimum: 3
+  function c = 'lib/validations/length', c: c, object: object, field_name: 'tags', maximum: 5
 
   hash_assign object['valid'] = c.valid
   hash_assign object['errors'] = c.errors
