Changed the questions layout

--- a/app/views/partials/theme/simple/comments/new_entry.liquid
+++ b/app/views/partials/theme/simple/comments/new_entry.liquid
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <div class="w-full flex justify-between mb-4 flex-row-reverse" data-comment-show-new-post>
+  <div class="w-full flex justify-between flex-row-reverse" data-comment-show-new-post>
     <span class="button button-secondary button-small cursor-pointer">{{ 'app.models.comments.comment' | t }}</span>
   </div>
 </form>
