--- a/app/views/partials/theme/simple/posts/show.liquid
+++ b/app/views/partials/theme/simple/posts/show.liquid
@@ -2,16 +2,18 @@
   {% include 'theme/simple/posts/metatags', post: post %}
 {% endcontent_for %}
 
-<h1 class="text-4xl font-medium">
+<h1 class="mb-1 text-4xl font-medium">
   {{root_post.title}}
 </h1>
-<div class="my-6">
-  {% include 'theme/simple/posts/card', post: root_post, current_profile: current_profile  %}
-  {% liquid
-    for child_post in root_post.posts
-      include 'theme/simple/posts/card', post: child_post, current_profile: current_profile, root_post: root_post
-    endfor
-  %}
-</div>
+
+{% render 'theme/simple/ui/tags', tags: root_post.tags, url: '/posts?tag=' %}
+
+{% include 'theme/simple/posts/card', post: root_post, current_profile: current_profile  %}
+
+{% liquid
+  for child_post in root_post.posts
+    include 'theme/simple/posts/card', post: child_post, current_profile: current_profile, root_post: root_post
+  endfor
+%}
 
 {% include 'theme/simple/dashboard/posts/reply', post: root_post, object: object, presigned_url: presigned_url %}
