--- a/app/views/partials/theme/simple/ui/bigtitle.liquid
+++ b/app/views/partials/theme/simple/ui/bigtitle.liquid
@@ -5,6 +5,6 @@
 %}
 
 
-<h3 class="mb-4 mt-10 first:mt-0 text-2xl">
+<h2 class="mb-4 mt-10 first:mt-0 text-3xl font-semibold">
   {{ label }}
-</h3>
+</h2>
